[package]
name = "gta3-autosplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { workspace = true, features = ["alloc"] }
bytemuck.workspace = true
dlmalloc.workspace = true

[lib]
crate-type = ["cdylib"]
