[package]
name = "sr2-autosplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { workspace = true, features = ["alloc", "derive"] }
autosplitter-helpers = { path = "../autosplitter-helpers" }
bytemuck.workspace = true
dlmalloc.workspace = true

[lib]
crate-type = ["cdylib"]
